--- a/style.css
+++ b/style.css
@@ -16,6 +16,23 @@ header h1 {
 	color: white;
 } 
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li a {
+    font-family: 'Indie Flower', cursive;
+    font-size: 20px;
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
 #map {
     height: 50%;
     width: 25%;
@@ -77,11 +94,8 @@ input[type=submit]:hover {
     padding: 2em 0;
 }
 
-#time {
-    height: 50%;
-    width: 25%;
-    margin-left: auto;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+#dateTime {
+    font-family: 'Clicker Script', cursive;
+    font-size: 40px;
+    color: white;
 }
