--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-html, body {
-    height: 100%;
+html {
     margin: 0;
     padding: 0;
+}
+
+.row {
+    height: calc(100% - 85px);
 }
 
 header {
@@ -64,19 +67,19 @@ input[type=text], select {
 }
 
 #locationBox {
-    height: 5em;
+    height: calc(50vh - 90px);
     font-family: 'Indie Flower', cursive;
     font-size: 35px;
 }
 
 #mapBox {
-    height: 20em;
-}
-
-#testBox {
-    height: 15em;
+    height: calc(50vh - 90px);
 }
 
 .row{
     margin: 0 !important;
+}
+
+#twitterBox{
+    height: calc(100vh - 90px);
 }
